cards to homepage

--- a/assets/homepage/homepage_en.html
+++ b/assets/homepage/homepage_en.html
@@ -18,7 +18,7 @@
 <div class="library-cards">
   <div class="md3-card">
     <img
-    src="../images/watzek.jpg"
+    src="custom/01ALLIANCE_LCC-LCCNDETEST/assets/images/watzek.jpg"
     alt="Card image"
     class="md3-card-image"
   />
@@ -35,7 +35,7 @@
 
   <div class="md3-card">
    <img
-    src="../images/boley.jpg"
+    src="custom/01ALLIANCE_LCC-LCCNDETEST/assets/images/boley.jpg"
     alt="Card image"
     class="md3-card-image"
   />
