--- a/app/reserves-request/reserves-request-dialog.html
+++ b/app/reserves-request/reserves-request-dialog.html
@@ -1,62 +1,62 @@
-<h2 mat-dialog-title>Install Angular</h2>
+<h2 mat-dialog-title>Place Item on Reserve</h2>
+
+<div class="example-container">
+  <mat-label>First name</mat-label>
+  <mat-form-field appearance="fill">
+    <input _ngcontent-ng-c133002507="" autocomplete="off" matinput="" type="text" id="main-search-bar" class="mat-mdc-input-element mat-mdc-autocomplete-trigger search-input-field cdk-text-field-autofill-monitored" aria-label="Search field" aria-invalid="false" aria-required="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-haspopup="listbox" placeholder="Search anything">
+  </mat-form-field>
+   <mat-label>Last name</mat-label>
+  <mat-form-field appearance="outline">
+    <input matInput>
+  </mat-form-field>
+</div>
+
+
+
 <mat-dialog-content class="mat-typography">
-  <h3>Develop across all platforms</h3>
-  <p>Learn one way to build applications with Angular and reuse your code and abilities to build
-    apps for any deployment target. For web, mobile web, native mobile and native desktop.</p>
 
-  <h3>Speed &amp; Performance</h3>
-  <p>Achieve the maximum speed possible on the Web Platform today, and take it further, via Web
-    Workers and server-side rendering. Angular puts you in control over scalability. Meet huge
-    data requirements by building data models on RxJS, Immutable.js or another push-model.</p>
+  <div>
+    <mat-label>Course</mat-label>
+    <mat-form-field appearance="outline" >
+      
+      <input placeholder="e.g. Art 101" type="text" matInput autocomplete="off">
 
-  <h3>Incredible tooling</h3>
-  <p>Build features quickly with simple, declarative templates. Extend the template language with
-    your own components and use a wide array of existing components. Get immediate Angular-specific
-    help and feedback with nearly every IDE and editor. All this comes together so you can focus
-    on building amazing apps rather than trying to make the code work.</p>
+    </mat-form-field>
+  </div>
+<div>
+  <mat-form-field appearance="outline">
 
-  <h3>Loved by millions</h3>
-  <p>From prototype through global deployment, Angular delivers the productivity and scalable
-    infrastructure that supports Google's largest applications.</p>
+    <input placeholder="Course Title (e.g. Intro to Art)" type="text" matInput autocomplete="off">
+  </mat-form-field>
+</div>
+<div>
+  <mat-form-field appearance="outline">
+    <select placeholder="Loan Period" type="text" matInput autocomplete="off">
+      <option value="3 hours">3 hours</option>
+      <option value="24 hours">24 hours</option>
+      <option value="72 hours">72 hours</option>
 
-  <h3>What is Angular?</h3>
+    </select>
 
-  <p>Angular is a platform that makes it easy to build applications with the web. Angular
-    combines declarative templates, dependency injection, end to end tooling, and integrated
-    best practices to solve development challenges. Angular empowers developers to build
-    applications that live on the web, mobile, or the desktop</p>
+  </mat-form-field>
+</div>
+<div>
+  <mat-form-field>
+    <textarea placeholder="Comments"></textarea>
+  </mat-form-field>
+  </div>
 
-  <h3>Architecture overview</h3>
 
-  <p>Angular is a platform and framework for building client applications in HTML and TypeScript.
-  Angular is itself written in TypeScript. It implements core and optional functionality as a
-  set of TypeScript libraries that you import into your apps.</p>
 
-  <p>The basic building blocks of an Angular application are NgModules, which provide a compilation
-  context for components. NgModules collect related code into functional sets; an Angular app is
-  defined by a set of NgModules. An app always has at least a root module that enables
-  bootstrapping, and typically has many more feature modules.</p>
 
-  <p>Components define views, which are sets of screen elements that Angular can choose among and
-  modify according to your program logic and data. Every app has at least a root component.</p>
 
-  <p>Components use services, which provide specific functionality not directly related to views.
-  Service providers can be injected into components as dependencies, making your code modular,
-  reusable, and efficient.</p>
+<mat-form-field appearance="outline">
+  <mat-label>Email Address</mat-label>
+  <input matInput placeholder="Enter your email">
+</mat-form-field>
 
-  <p>Both components and services are simply classes, with decorators that mark their type and
-  provide metadata that tells Angular how to use them.</p>
 
-  <p>The metadata for a component class associates it with a template that defines a view. A
-  template combines ordinary HTML with Angular directives and binding markup that allow Angular
-  to modify the HTML before rendering it for display.</p>
 
-  <p>The metadata for a service class provides the information Angular needs to make it available
-  to components through Dependency Injection (DI).</p>
-
-  <p>An app's components typically define many views, arranged hierarchically. Angular provides
-  the Router service to help you define navigation paths among views. The router provides
-  sophisticated in-browser navigational capabilities.</p>
 </mat-dialog-content>
 <!--
 <mat-dialog-actions align="end">
