improved dialog box in RR

--- a/app/reserves-request/reserves-request-dialog.html
+++ b/app/reserves-request/reserves-request-dialog.html
@@ -43,7 +43,9 @@
         
 
       </div>
-<button type="cancel" class="btn btn-primary">Cancel</button>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <div class="button-row">
+        <button type="cancel" class="btn btn-primary" (click)="cancel()">Cancel</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
     </form>
   </div>
